--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <!-- Navbar End -->
 
 <!-- Landing Start -->
-<div class="container col-xxl-8 px-4 pt-4 bg-landing">
+<div class="container col-xxl-8 px-4 pt-4 bg-landing" id="hero">
 	<div class="row flex-lg-row-reverse align-items-center g-5 px-5">
 		<div class="col-10 col-sm-8 col-lg-6">
 			<img src="./images/hero.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
